--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>主页</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="../css/index.css">
 </head>
 <body>
   <div>主页面</div>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
